[package]
name = "wutengine_editor"
description = "Main editor application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
wutengine.workspace = true
wutengine_egui.workspace = true
wutengine_util.workspace = true

log.workspace = true
clap = { workspace = true, features = ["derive"] }
rfd.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
derive_more = { workspace = true, features = ["error", "from"] }

[build-dependencies]
winresource.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_System_Console"] }

[lints]
workspace = true
