[package]
name = "wutengine_asset_importers"
description = "Asset importers for WutEngine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[dependencies]
wutengine_assets.workspace = true

uuid.workspace = true
derive_more = { workspace = true, features = ["display", "error", "from"] }
log.workspace = true
image = { workspace = true, features = ["rayon", "default-formats"] }
profiling.workspace = true

[lints]
workspace = true
