[package]
name = "wutengine_asset_server"
description = "Asset server for WutEngine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[dependencies]
wutengine_assets.workspace = true
wutengine_util.workspace = true
wutengine_task.workspace = true

uuid.workspace = true
derive_more = { workspace = true, features = ["error", "display", "from"] }
log.workspace = true
profiling.workspace = true
serde_json.workspace = true
postcard.workspace = true

[lints]
workspace = true
